--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
-name = "NEA"
+name = "nea"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+egui = "0.21.0"
+eframe = "0.21.3"
+iced = "0.8"
+time = "0.3.19"
+tokio = { version = "1.0", features = ["sync"] }
+itertools = "0.10.5"
+rustc-hash = "1.1"
+env_logger = "0.10"
