--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,36 @@ edition = "2021"
 
 [dependencies]
 egui = "0.21.0"
-eframe = "0.21.3"
-iced = "0.8"
-time = "0.3.19"
-tokio = { version = "1.0", features = ["sync"] }
-itertools = "0.10.5"
-rustc-hash = "1.1"
-env_logger = "0.10"
+# iced = { version = "0.8", features = ["canvas"] }
+# iced_native = "0.9.1"
+# iced_graphics = "0.7.0"
+# time = "0.3.20"
+# tokio = { version = "1.0", features = ["sync"] }
+# itertools = "0.10.5"
+# rustc-hash = "1.1"
+# env_logger = "0.10"
+# # valora = "0.2.12"
+# eframe = { version = "0.21.3", features = ["__screenshot"] }
+# tracing-subscriber = "0.3"
+# egui_glow = "0.21.0"
+# glow = "0.12"
+# piston = "0.53.0"
+# piston2d-graphics = "0.43.0"
+# pistoncore-glutin_window = "0.71.0"
+# piston2d-opengl_graphics = "0.82.0"
+# piston_window = "0.128.0"
+# find_folder = "0.3.0"
+# piston-ai_behavior = "0.33.0"
+# piston2d-sprite = "0.67.0"
+# image = "0.24.1"
+# piston2d-drag_controller = "0.30.0"
+# piston2d-deform_grid = "0.13.0"
+# gfx = "0.18.1"
+# gfx_device_gl = "0.16.2"
+# vecmath = "1.0.0"
+# camera_controllers = "0.33.0"
+# rand = "0.8.5"
+# shader_version = "0.7.0"
+# macroquad = "0.3"
+nannou = "0.18.1"
+nannou_egui = "0.5.0"
